--- a/archive.html
+++ b/archive.html
@@ -5,12 +5,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Untitled</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/css/Articles-Badges-images.css">
-    <link rel="stylesheet" href="assets/css/Navbar-Right-Links-icons.css">
+    <link rel="stylesheet" href="assets/css/main.css">
+    <link rel="stylesheet" href="assets/css/styles.min.css">
 </head>
 
 <body>
+    <!-- Start: Navbar Right Links -->
     <nav class="navbar navbar-light navbar-expand-md py-3">
         <div class="container"><a class="navbar-brand d-flex align-items-center" href="index.html"><span>lht‘s blog</span></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-2"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-2">
@@ -21,7 +21,7 @@
                 </ul>
             </div>
         </div>
-    </nav>
+    </nav><!-- End: Navbar Right Links -->
     <hr>
     <h1 style="margin-left: 480px;">2022</h1>
     <ul class="list-group" style="margin-left: 481px;padding-right: 0px;margin-right: 510px;">
@@ -29,7 +29,7 @@
         <li class="list-group-item"><a href="articles/hello_web.html">Hello Web</a></li>
         <li class="list-group-item"><a href="articles/hello_html.html">Hello HTML</a></li>
     </ul>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/js/main.js"></script>
 </body>
 
 </html>
