--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Untitled</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/css/Articles-Badges-images.css">
-    <link rel="stylesheet" href="assets/css/Navbar-Right-Links-icons.css">
+    <link rel="stylesheet" href="assets/css/main.css">
+    <link rel="stylesheet" href="assets/css/styles.min.css">
 </head>
 
 <body>
+    <!-- Start: Navbar Right Links -->
     <nav class="navbar navbar-light navbar-expand-md py-3">
         <div class="container"><a class="navbar-brand d-flex align-items-center" href="index.html"><span>lht‘s blog</span></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-2"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-2">
@@ -21,7 +21,8 @@
                 </ul>
             </div>
         </div>
-    </nav>
+    </nav><!-- End: Navbar Right Links -->
+    <!-- Start: Articles Badges -->
     <div class="container py-4 py-xl-5">
         <div class="row mb-5">
             <div class="col-md-8 col-xl-6 text-center mx-auto">
@@ -52,7 +53,7 @@
                         <div>
                             <p class="fw-bold mb-0">lht</p>
                         </div>
-                    </div><a class="btn btn-primary fs-5 py-2 px-4" role="button" href="articles/hello_world.html" style="margin-right: -10px;">more</a>
+                    </div><a class="btn btn-primary fs-5 py-2 px-4" role="button" href="articles/hello_web.html" style="margin-right: -10px;">more</a>
                 </div>
             </div>
             <div class="col">
@@ -64,12 +65,12 @@
                         <div>
                             <p class="fw-bold mb-0">lht</p>
                         </div>
-                    </div><a class="btn btn-primary fs-5 py-2 px-4" role="button" href="articles/hello_world.html" style="margin-right: -10px;">more</a>
+                    </div><a class="btn btn-primary fs-5 py-2 px-4" role="button" href="articles/hello_html.html" style="margin-right: -10px;">more</a>
                 </div>
             </div>
         </div>
-    </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
+    </div><!-- End: Articles Badges -->
+    <script src="assets/js/main.js"></script>
 </body>
 
 </html>
