--- a/talk.html
+++ b/talk.html
@@ -5,12 +5,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Untitled</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/css/Articles-Badges-images.css">
-    <link rel="stylesheet" href="assets/css/Navbar-Right-Links-icons.css">
+    <link rel="stylesheet" href="assets/css/main.css">
+    <link rel="stylesheet" href="assets/css/styles.min.css">
 </head>
 
 <body>
+    <!-- Start: Navbar Right Links -->
     <nav class="navbar navbar-light navbar-expand-md py-3">
         <div class="container"><a class="navbar-brand d-flex align-items-center" href="index.html"><span>lht‘s blog</span></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-2"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-2">
@@ -21,9 +21,10 @@
                 </ul>
             </div>
         </div>
-    </nav>
+    </nav><!-- End: Navbar Right Links -->
     <hr>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
+    <div class="input-group"><span class="input-group-text">test</span><input class="form-control" type="text"><button class="btn btn-primary" type="button">确定</button></div>
+    <script src="assets/js/main.js"></script>
 </body>
 
 </html>
