--- a/detail.html
+++ b/detail.html
@@ -74,6 +74,15 @@
             是针对特定的场景或需求，所需要采用的一系列概念、流程、规范与工具，即工程
           </p>
         </div>
+
+        <div class="cont-introduce1">
+          <h1>更多操作</h1>
+        </div>
+        <div class="cont-introduce2">
+          <dl class="Tourings">
+            <a href="ummarizin.html">学生名单</a>
+          </dl>
+        </div>
       </div>
     </div>
   </div>
